[Suggestions category] Warn more about removing categories.

This CL adds a more verbose DLOG warning if a local category is removed.
Furthermore, a big comment warns you in advance when you add a new local
category.

BUG=682184

Review-Url: https://codereview.chromium.org/2678343004
Cr-Commit-Position: refs/heads/master@{#448958}

Former-commit-id: 2d864d4d394055b7e20606037f7d4465d3928bd2